--- a/src/main/resources/templates/backend/hotel/hotelIndex.html
+++ b/src/main/resources/templates/backend/hotel/hotelIndex.html
@@ -1,76 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <html xmlns="http://www.w3.org/1999/xhtml"
-          xmlns:th="http://www.thymeleaf.org">
-   <div th:include="jspf/sidebar"></div>
-    <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <meta charset="UTF-8">
-    <title>Title</title>
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>GoTrip 後臺系統</title>
+  <!-- 本頁面使用css樣式 Plugin css for this page -->
+  <link rel="stylesheet" th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}" href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
+  <link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}" href="vendors/datatables.net-bs4/select.dataTables.min.css">
+  <!-- 通用css樣式 plugins:css -->
+  <link rel="stylesheet" th:href="@{/css/vertical-layout-light/style.css}" href="css/vertical-layout-light/style.css" >
+  <link rel="stylesheet" th:href="@{/vendors/ti-icons/css/themify-icons.css}" href="vendors/ti-icons/css/themify-icons.css">
+  <link rel="stylesheet" th:href="@{/vendors/feather/feather.css}" href="vendors/feather/feather.css" >
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+  <link rel="shortcut icon" href="images/favicon.png" />
 </head>
+
 <body>
-<main id="right-panel" class="right-panel"
-      style="background-color: white;">
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark"
-             style="background-color: tomato">
-            <div>
-                <a href="<th:url value='/'/>" class="navbar-brand">回前頁</a>
-            </div>
+  <div class="container-scroller">
+  
+    <nav th:replace="partials/fragment :: navbar"></nav>
+    
+    <div class="container-fluid page-body-wrapper">
+    
+	  <div th:replace="partials/fragment :: setting"></div>
+      <nav th:replace="partials/fragment :: sidebar"></nav>
+      
+      <!-- 主要內容 partial -->
+      <div class="main-panel">
+        <div class="content-wrapper">
 
-            <ul class="navbar-nav">
-                <li></li>
-
-            </ul>
-        </nav>
-    </header>
-    <br>
-
-    <div class="row">
-
-        <div class="container">
-            <h3 class="text-center">Hotel Manager</h3>
-            <hr>
-            <div class="container text-left">
-                <!-- 			<button type="button" class="btn btn-sm btn-danger"  onclick="new1()"><i class="bi bi-person-plus-fill"></i>新增</button> -->
-
-                <form action="ShowNewForm" name="new" method="GET">
-                    <input type="hidden" value="new" name="showNewForm"> <input
-                        type="submit" class="btn btn-success" value="new Hotel">
-                </form>
-
-                <!-- 		    <button type="button" class="btn btn-sm btn-danger"  onclick="query()"><i class="bi bi-search"></i>查詢</button> -->
-
-
-
-            </div>
-            <br>
-            <table class="table table-bordered" id="Research">
-                <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>飯店名稱</th>
-                    <th>價格</th>
-                    <th>業主名稱</th>
-                    <th>電話</th>
-                    <th>狀態</th>
-                    <th>房型</th>
-                    <th>照片</th>
-                    <th>刪除</th>
-                    <th>編輯</th>
+          <div class="row">
+            <div class="col-md-12 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <div class="card-title">Hotel List</div>
+                  <div class="table-responsive">
+                    <table class="table table-bordered" id="Research">
+                      <form action="ShowNewForm" name="new" method="GET">
+                        <input type="hidden" value="new" name="showNewForm"> <input
+                              type="submit" class="btn btn-success" value="new Hotel">
+                      </form>
+                      <thead>
+                      <tr>
+                        <th>ID</th>
+                        <th>飯店名稱</th>
+                        <th>價格</th>
+                        <th>業主名稱</th>
+                        <th>電話</th>
+                        <th>狀態</th>
+                        <th>房型</th>
+                        <th>照片</th>
+                        <th>刪除</th>
+                        <th>編輯</th>
 
 
-                </tr>
-                </thead>
-
-                <tbody>
-                <tr th:each="hotel : ${Hotel}">
-                    <th:url var="updateLink" value="/showEditForm">
+                      </tr>
+                      </thead>
+                      <th:url var="updateLink" value="/showEditForm">
                         <th:param name="UpdateId" value="${hotel.id}" />
-                    </th:url>
+                      </th:url>
+                      <tbody>
+                      <tr th:each="hotel : ${Hotel}">
                         <td th:text="${hotel.id}" />
                         <td th:text="${hotel.hotel_name}" />
                         <td th:text="${hotel.price}" />
@@ -78,34 +71,98 @@
                         <td th:text="${hotel.boss_name}"/>
                         <td th:text="${hotel.status}" />
                         <td th:text="${hotel.roomtype}" />
-                    <td><img width='60' height='72'
-                             src="<c:url value='/crm/picture/${hotel.id}' />" /></td>
-                    <td>
-                        <form action="Hotel.Delete" method="GET" name="delete">
-                                <input type="hidden" name="DeleteId"
-                                       value="<th:text='${hotel.id}' />"> <input
-                                    type="submit" class="btn btn-sm btn-danger" value="刪除">
-                          </form>
-                    </td>
-
+                        <td><img width='60' height='72' th:src="@{/hotel/picture(id=${hotel.id})}"></td>
+<!--                        <td><img width='60' height='72' th:src="@{/Goods/picture(id=${good.id})}"></td>-->
                         <td>
-                            <a class="btn btn-sm btn-danger" href="${updateLink}">更改 </a>
+                          <button class="btn btn-sm btn-danger"
+                                  th:onclick="deleteajax([[${hotel.id}]])" type="button"
+                                  id="deleteajax">刪除<i class="bi bi-trash-fill"></i>
+                          </button>
                         </td>
 
-                    </tr>
+                        <td>
+                          <a class="btn btn-sm btn-danger" href="${updateLink}">更改 </a>
+                        </td>
 
-                </tbody>
+                      </tr>
 
-            </table>
+                      </tbody>
+
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+        <footer th:replace="partials/fragment :: footer"></footer>
+        <!-- partial -->
+      </div>
     </div>
-</main>
-<script type="text/javascript"
-        src="https://code.jquery.com/jquery-3.6.0.js"></script>
-<script type="text/javascript"
-        src="//cdn.datatables.net/1.12.0/js/jquery.dataTables.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script>
+  </div>
 
+  <script th:src="@{/vendors/js/vendor.bundle.base.js}" src="vendors/js/vendor.bundle.base.js"></script>
+  <script th:src="@{/js/off-canvas.js}" src="vendors/js/off-canvas.js"></script>
+  <script th:src="@{/js/hoverable-collapse.js}" src="js/hoverable-collapse.js"></script>
+  <script th:src="@{/js/template.js}" src="js/template.js"></script>
+  <script th:src="@{/js/settings.js}" src="js/settings.js"></script>
+  
+  <script th:src="@{/vendors/datatables.net/jquery.dataTables.js}" src="vendors/datatables.net/jquery.dataTables.js"></script>
+  <script th:src="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.js}" src="vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
+  <script th:src="@{/js/dataTables.select.min.js}" src="js/dataTables.select.min.js"></script>
+  <script th:src="@{/js/dashboard-comment.js}" src="js/dashboard-comment.js"></script>
+	<script>
+		(function ($) {
+		$(document).ready( function () {
+		    $('#comment-table').DataTable();
+		} );
+	})(jQuery);
+
+        function deleteajax(id) {
+          console.log(id);
+          Swal.fire({
+            title: '請問是否要刪除此訂單?',
+            text: "已刪除的訂單無法復原，請再次確認",
+            icon: 'warning',
+            showCancelButton: true,
+            cancelButtonText: '取消',
+            confirmButtonColor: '#d33',
+            cancelButtonColor: '#3085d6',
+            confirmButtonText: '刪除'
+          }).then((result) => {
+            if (result.isConfirmed) {
+              $.ajax({
+                type: "get",
+                url: "/gotrip/hotel/delete/" + id,
+
+                success: function (msg) {
+                  Swal.fire(
+                          '已刪除!',
+                          '訂單已成功刪除!',
+                          'success'
+                  ).then((result) => {
+                    if (result.isConfirmed) {
+                      location.reload();
+                    }
+                  })
+                },
+                error: function (msg) {
+                  // console.log(msg.status)
+                  Swal.fire({
+                    icon: 'error',
+                    title: '發生錯誤',
+                    text: 'HTTP 狀態碼為 ' + msg.status,
+                    footer: '<a href="https://developer.mozilla.org/zh-TW/docs/Web/HTTP/Status"  target="_blank">怎麼有這錯誤?</a>'
+                  })
+                }
+              });
+
+
+            }
+          })
+        }
+
+	</script>
 </body>
+
 </html>
