--- a/src/main/resources/templates/backend/comment-list.html
+++ b/src/main/resources/templates/backend/comment-list.html
@@ -8,11 +8,19 @@
   <!-- 本頁面使用css樣式 Plugin css for this page -->
   <link rel="stylesheet" th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}" href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
   <link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}" href="vendors/datatables.net-bs4/select.dataTables.min.css">
+  <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css}">
   <!-- 通用css樣式 plugins:css -->
   <link rel="stylesheet" th:href="@{/css/vertical-layout-light/style.css}" href="css/vertical-layout-light/style.css" >
   <link rel="stylesheet" th:href="@{/vendors/ti-icons/css/themify-icons.css}" href="vendors/ti-icons/css/themify-icons.css">
   <link rel="stylesheet" th:href="@{/vendors/feather/feather.css}" href="vendors/feather/feather.css" >
   <link rel="shortcut icon" href="images/favicon.png" />
+  <style type="text/css">
+	.img-com {
+		object-fit: cover;
+		width: 70px;
+		height: 70px;
+	}
+  </style>
 </head>
 
 <body>
@@ -37,27 +45,29 @@
                   <div class="table-responsive">
                     <table id="comment-table" class="display expandable-table w-100">
                       <colgroup>
+                        <col span="1" style="width: 5%;">
+                        <col span="1" style="width: 8%;">
+                        <col span="1" style="width: 7%;">
                         <col span="1" style="width: 10%;">
                         <col span="1" style="width: 10%;">
-                        <col span="1" style="width: 10%;">
-                        <col span="1" style="width: 10%;">
-                        <col span="1" style="width: 10%;">
-                        <col span="1" style="width: 10%;">
-                        <col span="1" style="width: 30%;">
-                        <col span="1" style="width: 10%;">
+                        <col span="1" style="width: 6%;">
+                        <col span="1" style="width: 24%;">
+                        <col span="1" style="width: 24%;">
+                        <col span="1" style="width: 8%;">
+<!--                         <col span="1" style="width: 5%;"> -->
                       </colgroup>
                       <thead>
                         <tr>
-                          <th>評論ID</th>
+                          <th>ID</th>
                           <th>評論項目</th>
                           <th>項目ID</th>
                           <th>使用者ID</th>
                           <th>評論日期</th>
                           <th>評分</th>
                           <th>評論內容</th>
-                          <th>狀態</th>
-                          <!-- <th>照片</th> -->
-                          <th></th>
+                          <th>照片</th>
+                          <th>修改</th>
+<!--                           <th></th> -->
                         </tr>
                       </thead>
                       <tbody>
@@ -67,8 +77,20 @@
                           <td th:text="${comment.itemId}"></td>
                           <td th:text="${comment.userId}"></td>
                           <td th:text="${comment.date}"></td>
-                          <td th:text="${comment.rating}"></td>
+                          <td th:text="${comment.rating}"><i class="bi bi-star-fill text-warning"></i></td>
                           <td th:text="${comment.content}"></td>
+<!--                           <img th:src="@{${'/img/' + players.id +'_'+ players.name + '.png'}}" width="120"/> -->
+                          <td><img th:if="${comment.image1 != null}" th:src="@{'/'+${comment.image1}}" class="img-com"/>
+                          <img th:if="${comment.image2 != null}" th:src="@{'/'+${comment.image2}}" class="img-com"/>
+                          <img th:if="${comment.image3 != null}" th:src="@{'/'+${comment.image3}}" class="img-com"/> </td>
+                          <td>
+<!--                           <button type="submit" id="delete${comment.id}" style="width: 30px; height: 30px " class="edit btn btn-outline-warning btn-sm rounded-circle"> -->
+<!-- 														<i class="bi bi-pencil-square"></i> -->
+<!-- 													</button> -->
+<!-- 													<button type="button" style="width: 30px; height: 30px " class="delete btn btn-outline-info btn-sm rounded-circle "> -->
+<!-- 														<i class="bi bi-trash3"></i> -->
+<!-- 													</button> -->
+													顯示</td>
                         </tr>                                                                                               
                       </tbody>
                     </table>
