Thymeleaf bug修復 + CSV JSON匯出功能(仍有bug)

--- a/src/main/resources/templates/ticketInput.html
+++ b/src/main/resources/templates/ticketInput.html
@@ -99,11 +99,10 @@
 												<label for="priceId">價格</label> <input type="text" name="price"
 													id="priceId" class="form-control" th:field="*{price}">
 											</div>
-											<p class="text-center">
-												<button type="button" class="btn btn-default"
-													onclick="history.go(-1)">返回</button>
-												<button type="submit" class="btn btn-primary">提交</button>
-											</p>
+										<p class="text-center">
+											<button type="button" class="btn btn-primary" onclick="history.go(-1)">返回</button>
+						                   <button type="submit" class="btn btn-primary">提交</button>
+						               </p>
 										</form>
 									</div>
 								</div>
