--- a/src/main/resources/templates/frontend/hotel.html
+++ b/src/main/resources/templates/frontend/hotel.html
@@ -5,6 +5,14 @@
 
 <body>
 <h2>12313</h2>
+
+<div class="flex-w flex-c-m m-tb-5">
+    <div
+            class="flex-c-m stext-106 cl6 size-104 bor4 pointer hov-btn3 trans-04 m-r-8 m-tb-4 js-show-filter">
+        <i class="icon-filter cl2 m-r-6 fs-15 trans-04 zmdi zmdi-filter-list"></i>
+        <i class="icon-close-filter cl2 m-r-6 fs-15 trans-04 zmdi zmdi-close dis-none"></i>
+        條件篩選
+    </div>
 </body>
 
 </html>
