--- a/src/main/resources/templates/frontend/login.html
+++ b/src/main/resources/templates/frontend/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
