--- a/src/main/resources/templates/backend/comment-list.html
+++ b/src/main/resources/templates/backend/comment-list.html
@@ -41,18 +41,18 @@
                   <div class="card-title">評論列表</div>
                   <div class="table-responsive">
                     <table id="comment-table" class="display expandable-table w-100">
-                      <colgroup>
-                        <col span="1" style="width: 5%;">
-                        <col span="1" style="width: 8%;">
-                        <col span="1" style="width: 7%;">
-                        <col span="1" style="width: 10%;">
-                        <col span="1" style="width: 10%;">
-                        <col span="1" style="width: 6%;">
-                        <col span="1" style="width: 24%;">
-                        <col span="1" style="width: 24%;">
-                        <col span="1" style="width: 8%;">
-                        <col span="1" style="width: 5%;">
-                      </colgroup>
+<!--                       <colgroup> -->
+<!--                         <col span="1" style="width: 5%;"> -->
+<!--                         <col span="1" style="width: 8%;"> -->
+<!--                         <col span="1" style="width: 7%;"> -->
+<!--                         <col span="1" style="width: 10%;"> -->
+<!--                         <col span="1" style="width: 10%;"> -->
+<!--                         <col span="1" style="width: 6%;"> -->
+<!--                         <col span="1" style="width: 24%;"> -->
+<!--                         <col span="1" style="width: 24%;"> -->
+<!--                         <col span="1" style="width: 8%;"> -->
+<!--                         <col span="1" style="width: 5%;"> -->
+<!--                       </colgroup> -->
                       <thead>
                         <tr>
                           <th>ID</th>
@@ -68,49 +68,35 @@
                         </tr>
                       </thead>
                       <tbody id="tbody">
-<!--                       	<tr th:each="comment:${comments}" class="odd gradeX"> -->
-<!--                           <td th:text="${comment.id}"></td> -->
-<!--                           <td th:text="${comment.itemTb}"></td> -->
-<!--                           <td th:text="${comment.itemId}"></td> -->
-<!--                           <td th:text="${comment.userId}"></td> -->
-<!--                           <td th:text="${comment.date}"></td> -->
-<!--                           <td th:text="${comment.rating}"><i class="bi bi-star-fill text-warning"></i></td> -->
-<!--                           <td th:text="${comment.content}"></td> -->
-<!--                            <img th:src="@{${'/img/' + players.id +'_'+ players.name + '.png'}}" width="120"/>  -->
-<!--                           <td> -->
-<!--                           	<img th:if="${comment.image1 != null}" th:src="@{'/'+${comment.image1}}" class="img-com rounded"/> -->
-<!--                           	<img th:if="${comment.image2 != null}" th:src="@{'/'+${comment.image2}}" class="img-com rounded"/> -->
-<!--                           	<img th:if="${comment.image3 != null}" th:src="@{'/'+${comment.image3}}" class="img-com rounded"/>  -->
-<!--                           </td> -->
-<!--                           <td> -->
-<!--                           <button type="submit" id="delete${comment.id}" style="width: 30px; height: 30px " class="edit btn btn-outline-warning btn-sm rounded-circle"> -->
-<!-- 														<i class="bi bi-pencil-square"></i> -->
-<!-- 													</button> -->
-<!-- 													<button type="button" style="width: 30px; height: 30px " class="delete btn btn-outline-info btn-sm rounded-circle "> -->
-<!-- 														<i class="bi bi-trash3"></i> -->
-<!-- 													</button> -->
-<!-- 														顯示 -->
-<!-- 													</td> -->
-<!-- 													<td> -->
-<!-- 														<form th:action="@{/comments/}+${comment.id}" method="post" class="inline-block"> -->
-<!-- 															<button type="submit" class="btn btn-outline-warning btn-rounded btn-icon"> -->
+                      	<tr th:each="comment:${comments}" class="odd gradeX">
+                          <td th:text="${comment.id}"></td>
+                          <td th:text="${comment.itemTb}"></td>
+                          <td th:text="${comment.itemId}"></td>
+                          <td th:text="${comment.userId}"></td>
+                          <td th:text="${comment.date}"></td>
+                          <td th:text="${comment.rating}"><i class="bi bi-star-fill text-warning"></i></td>
+                          <td th:text="${comment.content}"></td>
+                          <td>
+<!--                           	<img th:src="@{${''+comment.images[1]}}" style="width: 100px"/> -->
+<!--                           	<img th:src="@{/data/uploadimages/comment/art.jpg}"/> -->
+                          </td>
+                          <td th:text="${comment.status}"></td>
+													<td>
+														<form th:action="@{/comments/form/}+${comment.id}" method="get" class="inline-block">
+															<button type="submit" class="px-2  btn btn-warning btn-rounded btn-sm">
 <!-- 																<i class="ti-pencil"></i> -->
-<!-- 															</button> -->
-<!-- 														<form th:id="'deleteComment' + ${comment.id}" th:action="@{/comments/}+${comment.id}" th:method="delete" class="inline-block"> -->
-<!-- 															<button type="submit" th:id="'btn-delete' + ${comment.id}" th:attr="onclick=|deleteComment(${comment.id})|" class="btn btn-outline-info btn-rounded btn-icon"> -->
+																修改
+															</button>
+														</form>
+														<form th:id="'deleteComment' + ${comment.id}" th:action="@{/comments/}+${comment.id}" th:method="delete" class="inline-block">
+															<button type="button" th:value="${comment.id}" class="px-2 btn btn-delete btn-info btn-rounded btn-sm">
 <!-- 																<i class="ti-trash"></i> -->
-<!-- 															</button> -->
-<!-- 														</form> -->
-<!-- 												</form> -->
-<!-- 													<button type="button" onclick="deleteComment(${comment.id})" class="delete btn btn-outline-info btn-sm rounded-circle "> -->
-<!-- 														<i class="bi bi-trash3"></i> -->
-<!-- 													</button> -->
-<!-- 												<form action="<c:url value='/comments/delete'/>" method="POST" id="deleteForm${comment.id}" class="inline-block"> -->
-<!-- 													<input type="hidden" name="id" value="${comment.id}"> -->
-<!-- 												</form> -->
-<!-- 												<button type="submit" id="delete${comment.id}" class="edit btn btn-outline-warning btn-sm btn-icon"> -->
-<!-- 													</td> -->
-<!--                         </tr>                                                                                                -->
+														<!-- th:id="'btn-delete' + ${comment.id}" -->
+																刪除
+															</button>
+														</form>
+													</td>
+                        </tr>                                                                                               
                       </tbody>
                     </table>
                   </div>
@@ -141,38 +127,38 @@
 	  $(document).ready(function() {
    
 		    $('#comment-table').DataTable({
-	            "ajax": {
-	                "url": "api/comments",
-	                "dataSrc": ""
-	            },
-	            "columns": [
-	                { "data": "id" },
-	                { "data": "itemTb" },
-	                { "data": "itemId" },
-	                { "data": "userId" },
-	                { "data": "date" },
-	                { "data": "rating" },
-	                { "data": "content"},
-	                { "data": getImg },
+// 	            "ajax": {
+// 	                "url": "api/comments",
+// 	                "dataSrc": ""
+// 	            },
+// 	            "columns": [
+// 	                { "data": "id" },
+// 	                { "data": "itemTb" },
+// 	                { "data": "itemId" },
+// 	                { "data": "userId" },
+// 	                { "data": "date" },
+// 	                { "data": "rating" },
+// 	                { "data": "content"},
+// 	                { "data": getImg },
 // 	                { "data": "image2", render: getImg },
 // 	                { "data": "image3", render: getImg },
-	            ],
-	      });
+// 	            ],
+// 	      });
 		    
-		    function getImg(data, type, row, meta) {
-		    		let str = "";	
-		        if (data.image1) {
-		        	str += '<img src="' + data.image1 + '" class="img-com rounded"/>'    
-		        } 
-		        if (data.image2) {
-		        	str += '<img src="' + data.image2 + '" class="img-com rounded"/>'    
-		        } 
-		        if (data.image3) {
-		        	str += '<img src="' + data.image3 + '" class="img-com rounded"/>'    
-		        } 
-		        return str;
+// 		    function getImg(data, type, row, meta) {
+// 		    		let str = "";	
+// 		        if (data.image1) {
+// 		        	str += '<img src="' + data.image1 + '" class="img-com rounded"/>'    
+// 		        } 
+// 		        if (data.image2) {
+// 		        	str += '<img src="' + data.image2 + '" class="img-com rounded"/>'    
+// 		        } 
+// 		        if (data.image3) {
+// 		        	str += '<img src="' + data.image3 + '" class="img-com rounded"/>'    
+// 		        } 
+// 		        return str;
 
-		    }
+// 		    }
 // 		    function getImg(data, type, row, meta) {
 // 		        if (data) {
 // 		        	  return '<img src="' + data + '" class="img-com rounded"/>';	    
@@ -181,30 +167,29 @@
 // 		        }
 // 		    }
 		    
-		    
+	  	})
 		});
 	  
-
 	  
-	  
-// 	  $(".btn-delete").onclick(function(e, id){
-// 			e.preventDefault(); // 取消原始動作
-// 	 			Swal.fire({
-// 	 				icon: 'warning',
-// 	 				title: '確定刪除?',
-// 	 				text: "確認刪除後將不可復原",
-// 	 				showCancelButton: true,
-// 	 				confirmButtonColor: '#FF8D29',
-// 	 				cancelButtonColor: '#FFCD38',
-// 	 				confirmButtonText: '確認',
-// 	 				cancelButtonText: '取消',
-// 	 				reverseButtons: true
-// 	 			}).then((result) => {
-// 	 				if (result.isConfirmed) {
-// 	 					document.getElementById("deleteForm"+id).submit();
-// 	 				}
-// 	 			})
-// 			})
+	  $(".btn-delete").click(function(e){
+			e.preventDefault(); // 取消原始動作
+			let id = $(this).val();
+	 			Swal.fire({
+	 				icon: 'warning',
+	 				title: '確定刪除?',
+	 				text: "確認刪除後將不可復原",
+	 				showCancelButton: true,
+	 				confirmButtonColor: '#FF8D29',
+	 				cancelButtonColor: '#FFCD38',
+	 				confirmButtonText: '確認',
+	 				cancelButtonText: '取消',
+	 				reverseButtons: true
+	 			}).then((result) => {
+	 				if (result.isConfirmed) {
+	 					$(this).parent().submit();
+	 				}
+	 			})
+			})
   </script>
 </body>
 
