tranfo pic detail ok  but info no show

--- a/src/main/resources/templates/backend/hotel/hotelEditForm.html
+++ b/src/main/resources/templates/backend/hotel/hotelEditForm.html
@@ -52,7 +52,7 @@
 
                           <fieldset class="form-group">
                             <label>ID</label>
-                            <input type="text" th:field="*{id}" id="name" class="form-control" readonly  />
+                            <input type="text" th:field="*{id}"  class="form-control" readonly  />
                           </fieldset>
 
 
