--- a/src/main/resources/templates/frontend/index.html
+++ b/src/main/resources/templates/frontend/index.html
@@ -707,7 +707,8 @@
 				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item villa">
 					<div class="block2 ">
 						<div class="block2-pic hov-img0">
-							<a href="product-detail.html">
+<!--							照片提供網址-->
+							<a  th:href="@{tohotelDetail(id=38)}">
 								<img src="images/hotels/villa-taoyuan-01.jpg" alt="IMG-PRODUCT">
 								<span
 									class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
@@ -718,7 +719,7 @@
 
 						<div class="block2-txt flex-w flex-t p-t-14">
 							<div class="block2-txt-child1 flex-col-l">
-								<a href="product-detail.html"
+								<a href="tohotelDetail"
 									class="fs-17 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
 									大溪威斯汀度假酒店
 								</a>
