--- a/src/main/resources/templates/backend/car-list.html
+++ b/src/main/resources/templates/backend/car-list.html
@@ -13,12 +13,11 @@
   <!-- 本頁面使用css樣式 Plugin css for this page -->
   <link rel="stylesheet" th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}" href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
   <link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}" href="vendors/datatables.net-bs4/select.dataTables.min.css">
-	<style type="text/css">
-		.img-com {
-			object-fit: cover;
-			width: 70px;
-			height: 70px;
-		}
+  <style type="text/css">
+	.img-com {
+		object-fit: cover;
+		height: 70px;
+	}
   </style>
 </head>
 
@@ -38,59 +37,55 @@
             <div class="col-md-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <div class="card-title">評論列表</div>
+                  <div class="card-title">車款列表</div>
                   <div class="table-responsive">
-                    <table id="comment-table" class="display expandable-table w-100">
-                      <colgroup>
-                        <col span="1" style="width: 6%;" class="font-weight-bold">
-                        <col span="1" style="width: 8%;" class="font-weight-bold">
-                        <col span="1" style="width: 6%;">
-                        <col span="1" style="width: 8%;">
-                        <col span="1" style="width: 8%;">
-                        <col span="1" style="width: 6%;">
-                        <col span="1" style="width: 22%;">
-                        <col span="1" style="width: 22%;">
-                        <col span="1" style="width: 7%;">
-                        <col span="1" style="width: 7%;">
-                      </colgroup>
+                    <table id="data-table" class="display expandable-table w-100"  style="text-align: center">
+<!--                       <colgroup> -->
+<!--                         <col span="1" style="width: 5%;"> -->
+<!--                         <col span="1" style="width: 8%;"> -->
+<!--                         <col span="1" style="width: 5%;"> -->
+<!--                         <col span="1" style="width: 8%;"> -->
+<!--                         <col span="1" style="width: 8%;"> -->
+<!--                         <col span="1" style="width: 5%;"> -->
+<!--                         <col span="1" style="width: 20%;"> -->
+<!--                         <col span="1" style="width: 20%;"> -->
+<!--                         <col span="1" style="width: 10%;"> -->
+<!--                         <col span="1" style="width: 11%;"> -->
+<!--                       </colgroup> -->
                       <thead>
                         <tr>
-                          <th>ID</th>
-                          <th>項目</th>
-                          <th>編號</th>
-                          <th>使用者</th>
-                          <th>評論日期</th>
-                          <th>評分</th>
-                          <th>評論內容</th>
+                          <th>類別</th>
+                          <th>廠牌</th>
+                          <th>MAKE</th>
+                          <th>車款</th>
+                          <th>動力</th>
+                          <th>變速</th>
+                          <th>排氣量</th>
                           <th>照片</th>
-                          <th>狀態</th>
                           <th>修改</th>
                         </tr>
                       </thead>
                       <tbody id="tbody">
-                      	<tr th:each="comment:${comments}" class="odd gradeX">
-                          <td th:text="${comment.id}" class="font-weight-bold"></td>
-                          <td th:text="${comment.itemTb}" class="font-weight-bold"></td>
-                          <td th:text="${comment.itemId}" class="font-weight-bold"></td>
-                          <td th:text="${comment.userId}"></td>
-                          <td th:text="${comment.date}"></td>
-                          <td th:text="${comment.rating}"><i class="bi bi-star-fill text-warning"></i></td>
-                          <td th:text="${comment.content}"></td>
+                      	<tr th:each="car:${carModels}" class="odd gradeX">
+                          <td th:text="${car.type}"></td>
+                          <td th:text="${car.makeCh}"></td>
+                          <td th:text="${car.makeEn}"></td>
+                          <td th:text="${car.model}"></td>
+                          <td th:text="${car.power}"></td>
+                          <td th:text="${car.drive}"><i class="bi bi-star-fill text-warning"></i></td>
+                          <td th:text="${car.capacity}"></td>
                           <td>
-                          	<div th:each="image:${comment.images}" class="d-inline-block">
-                          		<img th:src="@{${image}}" class="rounded img-com"/>
-                          	</div>
+                          	<img th:src="@{${car.image}}" class="rounded img-com"/>
                           </td>
-                          <td th:text="${comment.status}"></td>
 													<td>
-														<form th:action="@{/backend/comments/form/}+${comment.id}" method="get" class="inline-block">
+														<form th:action="@{/cars/form/}+${car.id}" method="get" class="inline-block">
 															<button type="submit" class="px-2  btn btn-warning btn-rounded btn-sm">
 <!-- 																<i class="ti-pencil"></i> -->
 																修改
 															</button>
 														</form>
-														<form th:id="'deleteComment' + ${comment.id}" th:action="@{/backend/comments/}+${comment.id}" th:method="delete" class="inline-block">
-															<button type="button" th:value="${comment.id}" class="px-2 btn btn-delete btn-info btn-rounded btn-sm">
+														<form th:id="'deleteComment' + ${car.id}" th:action="@{/cars/}+${car.id}" th:method="delete" class="inline-block">
+															<button type="button" th:value="${car.id}" class="px-2 btn btn-delete btn-info btn-rounded btn-sm">
 <!-- 																<i class="ti-trash"></i> -->
 														<!-- th:id="'btn-delete' + ${comment.id}" -->
 																刪除
@@ -123,59 +118,31 @@
   <script th:src="@{/js/dataTables.select.min.js}" src="js/dataTables.select.min.js"></script>
   <script th:src="@{/js/dashboard-comment.js}" src="js/dashboard-comment.js"></script>
   <script th:src="@{/vendors/sweetalert/sweetalert2.all.min.js}" src="vendors/sweetalert/sweetalert2.all.min.js"></script>
-<!--   <script th:src="@{/vendors/datatables.net/zh-HANT.json}"></script> -->
 <!--   <script th:src="@{//cdn.jsdelivr.net/npm/sweetalert2@11}" src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
   <script>
-//   	var zhTableUrl = /*[[@{/vendors/datatables.net/zh-HANT.json}]]*/;
 	  $(document).ready(function() {
    
-		    $('#comment-table').DataTable({
-// 		    		language: {
-//             		url: zhTableUrl  
-//             		}
-// 	            "ajax": {
-// 	                "url": "api/comments",
-// 	                "dataSrc": ""
-// 	            },
-// 	            "columns": [
-// 	                { "data": "id" },
-// 	                { "data": "itemTb" },
-// 	                { "data": "itemId" },
-// 	                { "data": "userId" },
-// 	                { "data": "date" },
-// 	                { "data": "rating" },
-// 	                { "data": "content"},
-// 	                { "data": getImg },
-// 	                { "data": "image2", render: getImg },
-// 	                { "data": "image3", render: getImg },
-// 	            ],
-// 	      });
-		    
-// 		    function getImg(data, type, row, meta) {
-// 		    		let str = "";	
-// 		        if (data.image1) {
-// 		        	str += '<img src="' + data.image1 + '" class="img-com rounded"/>'    
-// 		        } 
-// 		        if (data.image2) {
-// 		        	str += '<img src="' + data.image2 + '" class="img-com rounded"/>'    
-// 		        } 
-// 		        if (data.image3) {
-// 		        	str += '<img src="' + data.image3 + '" class="img-com rounded"/>'    
-// 		        } 
-// 		        return str;
-
-// 		    }
-// 		    function getImg(data, type, row, meta) {
-// 		        if (data) {
-// 		        	  return '<img src="' + data + '" class="img-com rounded"/>';	    
-// 		        } else {
-// 		        		return "";
-// 		        }
-// 		    }
-		    
-	  	})
+		    $('#data-table').DataTable({
+    
+	  		})
 		});
 	  
+	  
+		$('#data-table tbody').on('click', function () {
+            var tr = $(this).closest('tr');
+            var row = table.row(tr);
+
+            if (row.child.isShown()) {
+                // This row is already open - close it
+                row.child.hide();
+                tr.removeClass('shown');
+            }
+            else {
+                // Open this row
+                row.child(format(row.data())).show();
+                tr.addClass('shown');
+            }
+        })
 	  
 	  $(".btn-delete").click(function(e){
 			e.preventDefault(); // 取消原始動作
