--- a/src/main/resources/templates/backend/partials/fragment.html
+++ b/src/main/resources/templates/backend/partials/fragment.html
@@ -107,7 +107,7 @@
 	</nav>
 	
 	
-	<div th:fragment="setting" id="right-sidebar" class="settings-panel">
+			<div th:fragment="setting" id="right-sidebar" class="settings-panel">
         <i class="settings-close ti-close"></i>
         <ul class="nav nav-tabs border-top" id="setting-panel" role="tablist">
           <li class="nav-item">
@@ -265,171 +265,68 @@
       <nav th:fragment="sidebar" class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="views/dashboard/members.html">
+            <a class="nav-link" th:href="@{/members/list}">
               <i class="icon-head menu-icon"></i>
               <span class="menu-title">會員管理</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#order" aria-expanded="false" aria-controls="item">
+            <a class="nav-link" th:href="@{/backend/orders}">
               <i class="icon-paper menu-icon"></i>
               <span class="menu-title">訂單管理</span>
-              <i class="menu-arrow"></i>
             </a>
-            <div class="collapse" id="order">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="views/dashboard/orders/in-progress.html">處理中訂單</a></li>
-                <li class="nav-item"> <a class="nav-link" href="views/dashboard/orders.html">所有訂單</a></li>
-              </ul>
-            </div>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="views/dashboard/members.html">
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/backend/tickets}">
+              <i class="icon-image menu-icon"></i>
+              <span class="menu-title">票券管理</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/backend/restaurants}">
+              <i class="icon-flag menu-icon"></i>
+              <span class="menu-title">餐廳管理</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/backend/hotels}">
               <i class="icon-briefcase menu-icon"></i>
               <span class="menu-title">住宿管理</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="views/dashboard/members.html">
-              <i class="icon-flag menu-icon"></i>
-              <span class="menu-title">票券管理</span>
-            </a>
-          </li> -->
-          <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#item" aria-expanded="false" aria-controls="item">
-              <i class="icon-grid menu-icon"></i>
-              <span class="menu-title">商品管理</span>
+              <i class="icon-location menu-icon"></i>
+              <span class="menu-title">交通管理</span>
               <i class="menu-arrow"></i>
             </a>
             <div class="collapse" id="item">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="views/dashboard/tours.html">景點票券</a></li>
-                <li class="nav-item"> <a class="nav-link" href="views/dashboard/restaurants.html">餐廳管理</a></li>
-                <li class="nav-item"> <a class="nav-link" href="views/dashboard/hotels.html">住宿管理</a></li>
-                <li class="nav-item"> <a class="nav-link" href="views/dashboard/car-rental.html">租車管理</a></li>
+                <li class="nav-item"> <a class="nav-link" th:href="@{/backend/car/models}">車款管理</a></li>
+                <li class="nav-item"> <a class="nav-link" th:href="@{/backend/car/locations}">地點管理</a></li>
               </ul>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" th:href="@{/comments/list}">
+            <a class="nav-link" th:href="@{/backend/comments}">
               <i class="icon-speech-bubble menu-icon"></i>
               <span class="menu-title">評論管理</span>
             </a>
           </li>
+<!--           <li class="nav-item"> -->
+<!--             <a class="nav-link" href="views/dashboard/comments.html"> -->
+<!--               <i class="icon-marquee-plus menu-icon"></i> -->
+<!--               <span class="menu-title">上架請求</span> -->
+<!--             </a> -->
+<!--           </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="views/dashboard/comments.html">
-              <i class="icon-marquee-plus menu-icon"></i>
-              <span class="menu-title">上架請求</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="views/dashboard/members.html">
+            <a class="nav-link" th:href="@{/backend/charts}">
               <i class="icon-bar-graph menu-icon"></i>
               <span class="menu-title">統計圖表</span>
             </a>
           </li>
           <br>
-<!--           <li class="nav-item"> -->
-<!--             <a class="nav-link" href="index.html"> -->
-<!--               <i class="icon-grid menu-icon"></i> -->
-<!--               <span class="menu-title">Dashboard</span> -->
-<!--             </a> -->
-<!--           </li> -->
-<!--           <li class="nav-item"> -->
-<!--             <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic"> -->
-<!--               <i class="icon-layout menu-icon"></i> -->
-<!--               <span class="menu-title">UI Elements</span> -->
-<!--               <i class="menu-arrow"></i> -->
-<!--             </a> -->
-<!--             <div class="collapse" id="ui-basic"> -->
-<!--               <ul class="nav flex-column sub-menu"> -->
-<!--                 <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li> -->
-<!--                 <li class="nav-item"> <a class="nav-link" href="pages/ui-features/dropdowns.html">Dropdowns</a></li> -->
-<!--                 <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li> -->
-<!--               </ul> -->
-<!--             </div> -->
-<!--           </li> -->
-<!--           <li class="nav-item"> -->
-<!--             <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false" -->
-<!--               aria-controls="form-elements"> -->
-<!--               <i class="icon-columns menu-icon"></i> -->
-<!--               <span class="menu-title">Form elements</span> -->
-<!--               <i class="menu-arrow"></i> -->
-<!--             </a> -->
-<!--             <div class="collapse" id="form-elements"> -->
-<!--               <ul class="nav flex-column sub-menu"> -->
-<!--                 <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Basic Elements</a></li> -->
-<!--               </ul> -->
-<!--             </div> -->
-<!--           </li> -->
-<!--           <li class="nav-item"> -->
-<!--             <a class="nav-link" data-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts"> -->
-<!--               <i class="icon-bar-graph menu-icon"></i> -->
-<!--               <span class="menu-title">Charts</span> -->
-<!--               <i class="menu-arrow"></i> -->
-<!--             </a> -->
-<!--             <div class="collapse" id="charts"> -->
-<!--               <ul class="nav flex-column sub-menu"> -->
-<!--                 <li class="nav-item"> <a class="nav-link" href="pages/charts/chartjs.html">ChartJs</a></li> -->
-<!--               </ul> -->
-<!--             </div> -->
-<!--           </li> -->
-<!--           <li class="nav-item"> -->
-<!--             <a class="nav-link" data-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables"> -->
-<!--               <i class="icon-grid-2 menu-icon"></i> -->
-<!--               <span class="menu-title">Tables</span> -->
-<!--               <i class="menu-arrow"></i> -->
-<!--             </a> -->
-<!--             <div class="collapse" id="tables"> -->
-<!--               <ul class="nav flex-column sub-menu"> -->
-<!--                 <li class="nav-item"> <a class="nav-link" href="pages/tables/basic-table.html">Basic table</a></li> -->
-<!--               </ul> -->
-<!--             </div> -->
-<!--           </li> -->
-<!--           <li class="nav-item"> -->
-<!--             <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons"> -->
-<!--               <i class="icon-contract menu-icon"></i> -->
-<!--               <span class="menu-title">Icons</span> -->
-<!--               <i class="menu-arrow"></i> -->
-<!--             </a> -->
-<!--             <div class="collapse" id="icons"> -->
-<!--               <ul class="nav flex-column sub-menu"> -->
-<!--                 <li class="nav-item"> <a class="nav-link" href="pages/icons/mdi.html">Mdi icons</a></li> -->
-<!--               </ul> -->
-<!--             </div> -->
-<!--           </li> -->
-<!--           <li class="nav-item"> -->
-<!--             <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth"> -->
-<!--               <i class="icon-head menu-icon"></i> -->
-<!--               <span class="menu-title">User Pages</span> -->
-<!--               <i class="menu-arrow"></i> -->
-<!--             </a> -->
-<!--             <div class="collapse" id="auth"> -->
-<!--               <ul class="nav flex-column sub-menu"> -->
-<!--                 <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li> -->
-<!--                 <li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li> -->
-<!--               </ul> -->
-<!--             </div> -->
-<!--           </li> -->
-<!--           <li class="nav-item"> -->
-<!--             <a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error"> -->
-<!--               <i class="icon-ban menu-icon"></i> -->
-<!--               <span class="menu-title">Error pages</span> -->
-<!--               <i class="menu-arrow"></i> -->
-<!--             </a> -->
-<!--             <div class="collapse" id="error"> -->
-<!--               <ul class="nav flex-column sub-menu"> -->
-<!--                 <li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html"> 404 </a></li> -->
-<!--                 <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li> -->
-<!--               </ul> -->
-<!--             </div> -->
-<!--           </li> -->
-<!--           <li class="nav-item"> -->
-<!--             <a class="nav-link" href="pages/documentation/documentation.html"> -->
-<!--               <i class="icon-paper menu-icon"></i> -->
-<!--               <span class="menu-title">Documentation</span> -->
-<!--             </a> -->
-<!--           </li> -->
+
         </ul>
       </nav>
       
