--- a/src/main/resources/templates/frontend/partials/fragment.html
+++ b/src/main/resources/templates/frontend/partials/fragment.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/vendors/perfect-scrollbar/perfect-scrollbar.css}" href="vendors/perfect-scrollbar/perfect-scrollbar.css">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/util.css}" href="css/util.css">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" href="css/main.css">
+	<link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
 	<link rel="icon" type="image/png" href="images/favicon.png" />
 </head>
 
@@ -772,6 +773,9 @@
 		<script th:src="@{/vendors/perfect-scrollbar/perfect-scrollbar.min.js}" src="vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 		<script th:src="@{/js/main.js}" src="js/main.js"></script>
 		<script th:src="@{/js/frontend.js}" src="js/frontend.js"></script>
+		<script th:src="@{https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js}"></script>
+		<script th:src="@{/js/clusterMap.js}" src="js/clusterMap.js"></script>
+		<script th:src="@{https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-language/v1.0.0/mapbox-gl-language.js}"></script>
 	</div>
 	
 </body>
